# space-expansion

./: .gitignore  AdministratorPanel.cpp  AdministratorPanel.h  CMakeLists.txt  ManagersHive.h  Priveledeged.proto  Protocol.proto  README.md  SystemManager.cpp  SystemManager.h  conanfile.txt  main.cpp  regenerate_python_files.sh  space-expansion.cfg
AdministratorPanel/: AdministratorPanel.cpp  (+6 more)
server/: CMakeLists.txt  CommonTypes.proto  Dockerfile  Privileged.proto  Protocol.proto  SystemManager.cpp  SystemManager.h  conanfile.txt  main.cpp  space-expansion.cfg
server/AdministratorPanel/: AdministratorPanel.cpp  AdministratorPanel.h  BasicManipulator.cpp  BasicManipulator.h  ClockControl.cpp  ClockControl.h  Screen.cpp  Screen.h  Spawn.cpp  Spawn.h
server/Arbitrators/: ArbitratorsFactory.cpp  BaseArbitrator.cpp  BaseArbitrator.h  ResourceCollecting.cpp  ResourceCollecting.h
server/Autotests/ClientSDK/: ClientBaseModule.cpp  ClientBaseModule.h  Interfaces.h  RootSession.cpp  RootSession.h  Router.cpp  Router.h  Socket.cpp  Socket.h  SyncPipe.cpp  SyncPipe.h
server/Autotests/ClientSDK/Modules/: ClientAccessPanel.cpp  ClientAccessPanel.h  ClientAdministratorPanel.cpp  ClientAsteroidMiner.cpp  ClientAsteroidMiner.h  ClientAsteroidScanner.cpp  ClientBlueprintStorage.cpp  ClientCelestialScanner.cpp  ClientCelestialScanner.h  ClientCommutator.cpp  ClientCommutator.h  ClientEngine.cpp  ClientEngine.h  ClientMessanger.cpp  ClientMessanger.h  ClientPassiveScanner.cpp  ClientPassiveScanner.h  ClientResourceContainer.cpp  ClientResourceContainer.h  ClientShip.cpp  ClientShip.h  ClientShipyard.cpp  ClientShipyard.h
server/Autotests/ClientSDK/Procedures/: FindModule.cpp  Navigation.cpp  Navigation.h  Resources.cpp  Resources.h
server/Autotests/FunctionalTests/: AdministratorPanelTests.cpp  AsteroidMinerTests.cpp  AsteroidScannerTests.cpp  BlueprintsStorageTests.cpp  CelestialScannerTests.cpp  CollectingResourcesArbitratorTest.cpp  EngineControllTests.cpp  ExploringShipsTests.cpp  FunctionalTestFixture.cpp  FunctionalTestFixture.h  LoginTests.cpp  NavigationTests.cpp  ResourceContainerTests.cpp  Scenarios.cpp  Scenarios.h  ShipTests.cpp  ShipyardTests.cpp
server/Autotests/Mocks/: MockedBaseModule.cpp  MockedBaseModule.h
server/Autotests/Mocks/Modules/: MockedCommutator.cpp  MockedCommutator.h
server/Autotests/Modules/: CommutatorTests.cpp  CommutatorTests.h  EngineTests.cpp  Helper.cpp  Helper.h  MessangerTests.cpp  ModulesTestFixture.cpp  ModulesTestFixture.h  OldCommutatorTests.cpp  PassiveScannerTests.cpp
server/Autotests/Network/: ProtobufChannelTests.cpp
server/Autotests/TestUtils/: BidirectionalChannel.h  Connector.h  DirectChannel.h  FreezableLogic.h  ProtobufSyncPipe.cpp  ProtobufSyncPipe.h  SessionsMux.h  Unpackers.h
server/Autotests/Utils/: IdArray.cpp  IndexedVectorTests.cpp  RandomSequence.cpp  SimpleSubscriptionMixinTests.cpp  SubscriptionsBox.cpp  SubscriptionsBoxTests.cpp  UnorderedVector.cpp
server/Autotests/World/: GridTests.cpp
server/Blueprints/: BaseBlueprint.cpp  BaseBlueprint.h  BlueprintFactory.cpp  BlueprintFactory.h  BlueprintName.h  BlueprintsLibrary.cpp  BlueprintsLibrary.h  Fwd.h
server/Blueprints/Modules/: AsteroidMinerBlueprint.h  PassiveScanner.h  Shipyard.h
server/Blueprints/Ships/: ShipBlueprint.cpp  ShipBlueprint.h
server/ConfigDI/: Containers.cpp  Containers.h  Interfaces.h  Readers.cpp  Readers.h
server/Conveyor/: Conveyor.cpp  Conveyor.h  IAbstractLogic.h  Proceeders.h
server/ConveyorTools/: ObjectsFilter.cpp  ObjectsFilter.h  PhysicalObjectsFilters.h
server/Geometry/: Point.cpp  Point.h  Printers.cpp  Printers.h  Rectangle.h  Vector.cpp  Vector.h
server/Modules/: All.h  BaseModule.cpp  BaseModule.h  CommonModulesManager.h  Constants.h  Fwd.h  Managers.h
server/Modules/AccessPanel/: AccessPanel.cpp  AccessPanel.h
server/Modules/AsteroidMiner/: AsteroidMiner.cpp  AsteroidMiner.h  AsteroidMinerManager.h
server/Modules/AsteroidScanner/: AsteroidScanner.cpp  AsteroidScanner.h  AsteroidScannerManager.h
server/Modules/BlueprintsStorage/: BlueprintsStorage.cpp  BlueprintsStorage.h  BlueprintsStorageManager.h
server/Modules/CelestialScanner/: CelestialScanner.cpp  CelestialScanner.h  CelestialScannerManager.h
server/Modules/Commutator/: Commutator.cpp  Commutator.h  CommutatorManager.h
server/Modules/Engine/: Engine.cpp  Engine.h  EnginesManager.h
server/Modules/Messanger/: Messanger.cpp  Messanger.h
server/Modules/PassiveScanner/: PassiveScanner.cpp  PassiveScanner.h  PassiveScannerManager.h
server/Modules/ResourceContainer/: ResourceContainer.cpp  ResourceContainer.h  ResourceContainerManager.cpp  ResourceContainerManager.h
server/Modules/Ship/: Ship.cpp  Ship.h  ShipManager.h  ShipsManager.h
server/Modules/Shipyard/: Shipyard.cpp  Shipyard.h  ShipyardManager.h
server/Modules/SystemClock/: SystemClock.cpp  SystemClock.h  SystemClockManager.h
server/Network/: BufferedProtobufTerminal.h  BufferedTerminal.cpp  BufferedTerminal.h  Fwd.h  Interfaces.h  ProtobufChannel.h  SessionMux.cpp  SessionMux.h  UdpDispatcher.cpp  UdpDispatcher.h  UdpSocket.cpp  UdpSocket.h
server/Newton/: NewtonEngine.cpp  PhysicalObject.cpp  PhysicalObject.h
server/Ships/: Ship.cpp  Ship.h  ShipsManager.h
server/Utils/: ChunksPool.h  Clock.cpp  Clock.h  FloatComparator.h  GlobalContainer.h  GlobalContainerUtils.cpp  GlobalContainerUtils.h  IdArray.h  IndexedVector.hpp  ItemsConverter.cpp  ItemsConverter.h  Linker.cpp  Linker.h  MessageUtil.h  Mutex.h  Printers.cpp  Printers.h  RandomSequence.h  Randomizer.cpp  Randomizer.h  SimpleIdPool.h  SimpleSubscriptionMixin.cpp  SimpleSubscriptionMixin.h  Spinlock.h  StringUtils.cpp  StringUtils.h  SubscriptionsBox.cpp  SubscriptionsBox.h  UnorderedVector.h  UsefulTypes.hpp  WaitingFor.h  WeakPtrs.h  YamlReader.cpp  YamlReader.h
server/World/: Grid.cpp  Grid.h  ObjectContainers.cpp  ObjectContainers.h  ObjectTypes.h  Player.cpp  Player.h  PlayersStorage.h  Resources.cpp  Resources.h  World.cpp  World.h
server/World/CelestialBodies/: Asteroid.cpp  Asteroid.h  AsteroidGenerator.cpp
(+493 files in other folders)
